Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-02-20 (SVN):
    * q_stdinc.h: add vec4_t as a new type.
    * gl_rsurf.c (hw version): add missing GL_BLEND disable call at the
      end of R_RenderBrushPoly for DRF_TRANSLUCENT cases. minor tidyups.
    * gl_rmain.c (hw version): copy over R_DrawSpriteModel from the h2
      version. adapt R_TransformModelToClip and R_TransformClipToWindow
      from quake3 and R_GetScreenPosFromWorldPos from jlquake. fix the
      broken R_DrawName using R_GetScreenPosFromWorldPos() from jlquake.
      remove MultiplyMatrix/TransformPoint of original hw, now replaced
      by R_GetScreenPosFromWorldPos(). R_DrawName() readability cleanup.
      several minor tidyups.
    * r_main.c (hw version): R_DrawName() readability cleanup.
    * render.h (hw version): R_DrawName() prototype update.
    * sbar.c (hw version): SB_PlacePlayerNames() readability cleanups.
    * gl_rmain.c, gl_rsurf.c (h2 versions): several minor cleanups.
    * update version date stamp to 2013-02-20.

2013-02-18 (SVN):
    * model.h: change SURF_DRAWBLACK from 0x200 to 0x100.
    * gl_model.h: change SURF_DRAWBLACK from 0x200 to 0x100 and change
      SURF_UNDERWATER from 0x100 to 0x200. these two flags are set only
      at runtime and now the surface flags are in order in software and
      opengl versions.
    * gl_model.c: sync Mod_LoadAllSkins() between h2 and hw versions so
      that h2 now checks for skintype like hw does. this can be further
      improved later. on the other hand, I don't know any alias models
      with ALIAS_SKIN_GROUP skins either, so this shouldn't affect real
      life experience. update gl_rmain.c and gl_model.h to work against
      the Mod_LoadAllSkins() change.
    * gl_model.c (hw version): remove the 32768 checks from aliasmins
      in Mod_LoadAliasFrame() and Mod_LoadAliasGroup(), because they
      are already set that way in Mod_LoadAliasModel(). change the loop